[workspace]
members = ["common", "host", "tauri-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
